# dpo-parser-polytech

./: main.py  pyproject.toml
src/: settings.py
src/api_v1/: __init__.py
src/api_v1/courses/: __init__.py  parser.py  types.py  views.py
