[tool.poetry]
name = "dpo-polytech-parser"
version = "0.1.0"
description = ""
authors = ["Alexandr Gurov <MyNameIIIypuk@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
botasaurus = "^4.0.75"
httpx = "^0.27.2"
fastapi = {extras = ["all"], version = "^0.115.4"}


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
